@@ -1,6 +1,14 @@
 2025-12-01  Kevin Ushey <kevinushey@gmail.com>
 
 	* R/Attributes.R: Update OpenMP plugin for macOS
+2025-12-02  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/loadRcppModules.R: Remove file with function deprecated years ago
+	* man/loadRcppModules-deprecated.Rd: Idem
+	* NAMESPACE: Remove reference to loadRcppModules()
+	* man/loadModule.Rd: Idem
+	* man/Rcpp-deprecated.Rd: Idem
+	* vignettes/rmd/Rcpp-modules.Rmd: Idem
 
 2025-11-29  Dirk Eddelbuettel  <edd@debian.org>
 
